# spaceship-core-near

./: .gitignore  LICENSE  README.md  _rust_setup.sh  makefile
contracts/auction/: Cargo.toml
contracts/auction/src/: events.rs  lib.rs  owner.rs  view.rs
contracts/auction/tests/: test_logic.rs  test_migrate.rs  test_owner.rs
contracts/auction/tests/setup/: interface.rs  mod.rs  nft.rs  owner.rs  usn.rs  views.rs
contracts/boxmall/: Cargo.toml
contracts/boxmall/src/: events.rs  invite.rs  lib.rs  owner.rs  view.rs
contracts/boxmall/tests/: sim_buys.rs  test_auction.rs  test_collectpool.rs  test_corepool.rs  test_logic.rs  test_shipmarket.rs  test_shippool.rs  test_trialpool.rs
contracts/collectpool/: Cargo.toml
contracts/collectpool/src/: lib.rs  owner.rs  view.rs
contracts/corepool/: Cargo.toml
contracts/corepool/src/: lib.rs  owner.rs  view.rs
contracts/luckpool/: Cargo.toml
contracts/luckpool/src/: events.rs  lib.rs  mynft.rs  owner.rs  sortition_sum_tree.rs  view.rs
contracts/magicbox/: Cargo.toml
contracts/magicbox/src/: events.rs  lib.rs  mynft.rs  view.rs
contracts/mock_nft/: Cargo.toml
contracts/mock_nft/src/: lib.rs
contracts/mock_receiver/: Cargo.toml
contracts/mock_receiver/src/: lib.rs
contracts/mock_usn/: Cargo.toml
contracts/mock_usn/src/: lib.rs
contracts/rankpool/: Cargo.toml
contracts/rankpool/src/: events.rs  lib.rs  utils.rs  view.rs
contracts/riskerpool/: Cargo.toml
contracts/riskerpool/src/: lib.rs  owner.rs  view.rs
contracts/shipmarket/: Cargo.toml
contracts/shipmarket/src/: events.rs  lib.rs  owner.rs  view.rs
contracts/shippool/: Cargo.toml
contracts/shippool/src/: events.rs  lib.rs  owner.rs  view.rs
contracts/spaceship/: Cargo.toml
contracts/spaceship/src/: events.rs  ft.rs  lib.rs  mynft.rs  nft.rs  owner.rs  view.rs
contracts/spaceship/tests/: test_nft.rs  test_owner.rs
contracts/spaceship/tests/setup/: ft.rs  mod.rs  nft.rs  owner.rs  views.rs
contracts/token-tia/: Cargo.toml  README.md
contracts/token-tia/src/: lib.rs  owner.rs  view.rs
contracts/token-tia/tests/: test_migrate.rs
contracts/token-tia/tests/setup/: mod.rs
contracts/trialpool/: Cargo.toml
contracts/trialpool/src/: lib.rs  view.rs
releases/: boxmall_release.wasm  magicbox_release.wasm  rankpool_release.wasm  release_notes.md  riskerpool_release.wasm  shippool_release.wasm  spaceship_release.wasm  token_tia_release.wasm
