[package]
name = "boxmall"
version = "0.0.5"
authors = ["ZQ Jiang <zonquan@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.9"
near-contract-standards = "=4.0.0-pre.9"
near-sys = "=0.1"
rand = "0.7.3"
rand_distr = "0.3.0"

[dev-dependencies]
near-sdk-sim = "=4.0.0-pre.9"
mock_usn = { path = "../mock_usn" }
magicbox = { path = "../magicbox" }
spaceship = { path = "../spaceship" }
token-tia = { path = "../token-tia" }
shippool = { path = "../shippool" }
riskerpool = { path = "../riskerpool" }
rankpool = { path = "../rankpool" }
auction = { path = "../auction" }
trialpool = { path = "../trialpool" }
corepool = { path = "../corepool" }
collectpool = { path = "../collectpool" }
shipmarket = { path = "../shipmarket" }
luckpool = { path = "../luckpool" }
