[package]
name = "shippool"
version = "0.0.6"
authors = ["ZQ Jiang <zonquan@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.9"
near-contract-standards = "=4.0.0-pre.9"
near-sys = "=0.1"

[dev-dependencies]
near-sdk-sim = "=4.0.0-pre.9"
boxmall = { path = "../boxmall" }
token-tia = { path = "../token-tia" }
spaceship = { path = "../spaceship" }