[package]
name = "token-tia"
version = "0.0.1"
authors = ["Marco Sun <sun.dsk1@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.9"
near-contract-standards = "=4.0.0-pre.9"
near-sys = "=0.1"

[dev-dependencies]
near-sdk-sim = "=4.0.0-pre.9"